@@ -10,7 +10,8 @@ art_config.h:	gen_art_config
 
 EXTRA_DIST = 			\
 	libart-config.in	\
-	libart-2.0.pc.in
+	libart-2.0.pc.in	\
+	libart-2.0-uninstalled.pc.in
 
 lib_LTLIBRARIES = libart_lgpl_2.la
 
