@@ -87,4 +87,5 @@ libart-features.h
 Makefile
 libart-config
 libart-2.0.pc
+libart-2.0-uninstalled.pc
 libart-zip], [case "$CONFIG_FILES" in *libart-config*) chmod +x libart-config;; esac])
