@@ -1,0 +1,10 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+
+Name: libart
+Description: LGPL version of the libart library
+Version: @VERSION@
+Libs: ${pc_top_builddir}/${pcfiledir}/libart_lgpl_2.la
+Cflags: -I${pc_top_builddir}/${pcfiledir}
