@@ -1,3 +1,8 @@
+2004-03-04  Glynn Foster  <glynn.foster@sun.com>
+
+	* Makefile.am, configure.in, libart-2.0-uninstalled.pc.in:
+	Add uninstalled pkg-config file.
+
 Tue Sep 09 16:30:31 2003  George Lebl <jirka@5z.com>
 
 	* Release 2.3.16
